test/fixtures/public/fail/semantic/ourTests/failImportStressTest.jmm
/* REASON:
WARNING: Near line 10: Constructor was already imported!
ERROR: Near line 47: There isn't a constructor compatible with the arguments given!
ERROR: Near line 50: There isn't a constructor compatible with the arguments given!

*/

//key, value can be changed to other Types (e.g. boolean, int[], MyClass)
import Map;
import Map;
import Map(int, int);
import Map.put(int, int);
import Map.get(int) int;
import Map.clear();
import Map.print();
import Map.contains(int) boolean;
import Map.remove(int) boolean;



//content can be changed to other Types (e.g. boolean, int[], MyClass)
import List;
import List(int);
import List.add(int);
import List.add(int, int);
import List.contains(int) boolean;
import List.remove(int) boolean;
import List.size() int;

import static io.println(int) void;
import static io.println(int,int) void;
import static io.readln() int;

class ImportStressTest {

public static void main(String[] a) {

    List Io;
    int b;

    Io = new List();

    b = (new List(1)).size();
    b = (Io).size();

    b = 1;
    new Map(b, true);
    new Map(b, b);
    new ImportStressTest();
    new ImportStressTest(1, 1);
    new io();
    }
}